--- a/smap/src/components/NavBar.css
+++ b/smap/src/components/NavBar.css
@@ -20,6 +20,7 @@
   font-size: 16px;
   font-weight: 500;
   transition: background-color 0.2s, color 0.2s;
+  font-family: "SCDream4", sans-serif;
 }
 
 .nav-item.active {
