--- a/smap/src/index.css
+++ b/smap/src/index.css
@@ -88,6 +88,7 @@ body {
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: 600;
+  font-family: "SCDream8", sans-serif;
 }
 
 .crime-category label {
@@ -95,6 +96,7 @@ body {
   margin-bottom: 5px;
   cursor: pointer;
   font-size: 16px;
+  font-family: "SCDream6", sans-serif;
 }
 
 .crime-category input[type="checkbox"] {
@@ -104,12 +106,76 @@ body {
   vertical-align: middle;
 }
 
+/* 스크롤 생기지 않게 */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 /* 지도 */
 #kakao-map {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 320px; 
-  width: 1120px;
-  height: 1024px;
+  left: 320px;
+  width: calc(100% - 320px); 
+  height: 100vh;
   z-index: 1;
+}
+
+
+/* 모달 */
+.modal-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2000;
+}
+
+.modal-box {
+  background: #1e1e1e;
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  max-width: 80%;
+  position: relative;
+}
+
+/* 제목 */
+.modal-box h2 {
+  margin: 0 0 10px 0;
+  font-size: 48px;
+  font-family: "SCDream8", sans-serif;
+}
+
+/* 내용 */
+.modal-box p,
+.modal-box a {
+  font-size: 20px;
+  margin: 5px 0;
+  word-break: break-word;
+  font-family: "SCDream4", sans-serif;
+}
+
+/* 링크 */
+.modal-box a {
+  color: #00bfff;
+  text-decoration: underline;
+}
+
+/* 닫기 버튼 */
+.modal-close {
+  position: absolute;
+  top: 10px; right: 15px;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
 }
